--- a/UnitCommitment (T2)/testsXLSX.ipynb
+++ b/UnitCommitment (T2)/testsXLSX.ipynb
@@ -647,6 +647,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Modelo JuMP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n",
+      "Academic license - for non-commercial use only - expires 2025-03-26\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20×24 Matrix{VariableRef}:\n",
+       " w[1,1]   w[1,2]   w[1,3]   w[1,4]   w[1,5]   …  w[1,22]   w[1,23]   w[1,24]\n",
+       " w[2,1]   w[2,2]   w[2,3]   w[2,4]   w[2,5]      w[2,22]   w[2,23]   w[2,24]\n",
+       " w[3,1]   w[3,2]   w[3,3]   w[3,4]   w[3,5]      w[3,22]   w[3,23]   w[3,24]\n",
+       " w[4,1]   w[4,2]   w[4,3]   w[4,4]   w[4,5]      w[4,22]   w[4,23]   w[4,24]\n",
+       " w[5,1]   w[5,2]   w[5,3]   w[5,4]   w[5,5]      w[5,22]   w[5,23]   w[5,24]\n",
+       " w[6,1]   w[6,2]   w[6,3]   w[6,4]   w[6,5]   …  w[6,22]   w[6,23]   w[6,24]\n",
+       " w[7,1]   w[7,2]   w[7,3]   w[7,4]   w[7,5]      w[7,22]   w[7,23]   w[7,24]\n",
+       " w[8,1]   w[8,2]   w[8,3]   w[8,4]   w[8,5]      w[8,22]   w[8,23]   w[8,24]\n",
+       " w[9,1]   w[9,2]   w[9,3]   w[9,4]   w[9,5]      w[9,22]   w[9,23]   w[9,24]\n",
+       " w[10,1]  w[10,2]  w[10,3]  w[10,4]  w[10,5]     w[10,22]  w[10,23]  w[10,24]\n",
+       " w[11,1]  w[11,2]  w[11,3]  w[11,4]  w[11,5]  …  w[11,22]  w[11,23]  w[11,24]\n",
+       " w[12,1]  w[12,2]  w[12,3]  w[12,4]  w[12,5]     w[12,22]  w[12,23]  w[12,24]\n",
+       " w[13,1]  w[13,2]  w[13,3]  w[13,4]  w[13,5]     w[13,22]  w[13,23]  w[13,24]\n",
+       " w[14,1]  w[14,2]  w[14,3]  w[14,4]  w[14,5]     w[14,22]  w[14,23]  w[14,24]\n",
+       " w[15,1]  w[15,2]  w[15,3]  w[15,4]  w[15,5]     w[15,22]  w[15,23]  w[15,24]\n",
+       " w[16,1]  w[16,2]  w[16,3]  w[16,4]  w[16,5]  …  w[16,22]  w[16,23]  w[16,24]\n",
+       " w[17,1]  w[17,2]  w[17,3]  w[17,4]  w[17,5]     w[17,22]  w[17,23]  w[17,24]\n",
+       " w[18,1]  w[18,2]  w[18,3]  w[18,4]  w[18,5]     w[18,22]  w[18,23]  w[18,24]\n",
+       " w[19,1]  w[19,2]  w[19,3]  w[19,4]  w[19,5]     w[19,22]  w[19,23]  w[19,24]\n",
+       " w[20,1]  w[20,2]  w[20,3]  w[20,4]  w[20,5]     w[20,22]  w[20,23]  w[20,24]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "### Problema optimizacion\n",
+    "model = Model(Gurobi.Optimizer) # Crear objeto \"modelo\" con el solver Gurobi\n",
+    "\n",
+    "## Variables\n",
+    "I = 20\n",
+    "T = 24\n",
+    "N = 5\n",
+    "# Variables Economic Dispatch\n",
+    "@variable(model, p[1:I, 1:T] >= 0)  # Potencia activa de generador i en tiempo t. Valor en p.u.\n",
+    "@variable(model, d[1:N, 1:T])       # angulo (d de degree) de la barra n en tiempo t\n",
+    "\n",
+    "# Variables nuevas (UC)\n",
+    "# No se utiliza potencia reactiva: Aproximacion DC\n",
+    "#@variable(model, q[1:I, 1:T])       # Potencia reactiva de generador i en tiempo t. Valor en p.u. (puede ser < 0)\n",
+    "@variable(model, u[1:I, 1:T], Bin)       # AGREGAR NATURALEZA {0,1}. Indica encendido de gen i en t.\n",
+    "@variable(model, v[1:I, 1:T], Bin)       # AGREGAR NATURALEZA {0,1}. Indica apagado de gen i en t.\n",
+    "@variable(model, w[1:I, 1:T], Bin)       # AGREGAR NATURALEZA {0,1}. Estado ON(1)/OFF(0) de gen i en t.\n",
+    "\n",
+    "# Variables BESS (no se utilizan)\n",
+    "#@variable(model, pb[1:B, 1:T])      # flujo de potencia del BESS b en tiempo t\n",
+    "#@variable(model, e[1:B,1:T] >=0)    # energia almacenada en el BESS e en tiempo t\n",
+    "\n",
+    "## Funcion Objetivo\n",
+    "#@objective(model, Min, sum(Gen[i].VariableCostCost * p[i,t] +  Gen[i].FixedCost * w[i,t] + Gen[i].StartCost * u[i,t] for i in 1:I, t in 1:T ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ErrorException",
+     "evalue": "type GenericModel has no field VariableRef",
+     "output_type": "error",
+     "traceback": [
+      "type GenericModel has no field VariableRef\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] getproperty(model::Model, name::Symbol)\n",
+      "   @ JuMP C:\\Users\\sevil\\.julia\\packages\\JuMP\\OUdu2\\src\\JuMP.jl:133\n",
+      " [2] top-level scope\n",
+      "   @ c:\\Users\\sevil\\Desktop\\PUC-Local\\IEE3323---Operacion-Econ-mica-de-Sistemas-El-ctricos\\UnitCommitment (T2)\\testsXLSX.ipynb:1"
+     ]
+    }
+   ],
+   "source": [
+    "model.VariableRef"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
