--- a/UnitCommitment (T2)/testsXLSX.ipynb
+++ b/UnitCommitment (T2)/testsXLSX.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
       " [1] DataFrame(matrix::Matrix{Any})\n",
       "   @ DataFrames C:\\Users\\sevil\\.julia\\packages\\DataFrames\\58MUJ\\src\\dataframe\\dataframe.jl:400\n",
       " [2] top-level scope\n",
-      "   @ c:\\Users\\sevil\\OneDrive - Universidad Católica de Chile\\PUC_Ing\\2024-1\\Operacion Economica Sist Electricos\\Tarea2\\tests.ipynb:1"
+      "   @ c:\\Users\\sevil\\Desktop\\PUC-Local\\IEE3323---Operacion-Econ-mica-de-Sistemas-El-ctricos\\UnitCommitment (T2)\\testsXLSX.ipynb:1"
      ]
     }
    ],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -344,6 +344,59 @@
    ],
    "source": [
     "df1[1,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "typeof(df1[1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: cannot parse \"Bus1\" as Float64",
+     "output_type": "error",
+     "traceback": [
+      "ArgumentError: cannot parse \"Bus1\" as Float64\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] _parse_failure(T::Type, s::String, startpos::Int64, endpos::Int64)\n",
+      "   @ Base .\\parse.jl:378\n",
+      " [2] _parse_failure(T::Type, s::String)\n",
+      "   @ Base .\\parse.jl:378\n",
+      " [3] #tryparse_internal#509\n",
+      "   @ .\\parse.jl:374 [inlined]\n",
+      " [4] tryparse_internal\n",
+      "   @ .\\parse.jl:371 [inlined]\n",
+      " [5] #parse#510\n",
+      "   @ .\\parse.jl:384 [inlined]\n",
+      " [6] parse(::Type{Float64}, s::String)\n",
+      "   @ Base .\\parse.jl:384\n",
+      " [7] top-level scope\n",
+      "   @ c:\\Users\\sevil\\Desktop\\PUC-Local\\IEE3323---Operacion-Econ-mica-de-Sistemas-El-ctricos\\UnitCommitment (T2)\\testsXLSX.ipynb:1"
+     ]
+    }
+   ],
+   "source": [
+    "parse(Float64, df1[1,1])"
    ]
   },
   {
