--- a/UnitCommitment (T2)/testsXLSX.ipynb
+++ b/UnitCommitment (T2)/testsXLSX.ipynb
@@ -1201,43 +1201,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valor en t=1 :100.0\n",
-      "Valor en t=2 :97.2\n",
-      "Valor en t=3 :94.1\n",
-      "Valor en t=4 :81.00080437572413\n",
-      "Valor en t=5 :74.60080437572412\n",
-      "Valor en t=6 :90.5\n",
-      "Valor en t=7 :100.0\n",
-      "Valor en t=8 :100.0\n",
-      "Valor en t=9 :100.0\n",
-      "Valor en t=10 :100.0\n",
-      "Valor en t=11 :100.0\n",
-      "Valor en t=12 :100.0\n",
-      "Valor en t=13 :100.0\n",
-      "Valor en t=14 :100.0\n",
-      "Valor en t=15 :100.0\n",
-      "Valor en t=16 :100.0\n",
-      "Valor en t=17 :100.0\n",
-      "Valor en t=18 :100.0\n",
-      "Valor en t=19 :100.0\n",
-      "Valor en t=20 :100.0\n",
-      "Valor en t=21 :100.0\n",
-      "Valor en t=22 :100.0\n",
-      "Valor en t=23 :100.0\n",
-      "Valor en t=24 :100.0\n"
+      "Valor en t=1 :0.0\n",
+      "Valor en t=2 :0.0\n",
+      "Valor en t=3 :0.0\n",
+      "Valor en t=4 :0.0\n",
+      "Valor en t=5 :0.0\n",
+      "Valor en t=6 :0.0\n",
+      "Valor en t=7 :0.0\n",
+      "Valor en t=8 :0.0\n",
+      "Valor en t=9 :0.0\n",
+      "Valor en t=10 :0.0\n",
+      "Valor en t=11 :0.0\n",
+      "Valor en t=12 :0.0\n",
+      "Valor en t=13 :0.0\n",
+      "Valor en t=14 :0.0\n",
+      "Valor en t=15 :0.0\n",
+      "Valor en t=16 :0.0\n",
+      "Valor en t=17 :0.0\n",
+      "Valor en t=18 :0.0\n",
+      "Valor en t=19 :0.0\n",
+      "Valor en t=20 :0.0\n",
+      "Valor en t=21 :0.0\n",
+      "Valor en t=22 :0.0\n",
+      "Valor en t=23 :0.0\n",
+      "Valor en t=24 :0.0\n"
      ]
     }
    ],
    "source": [
     "for t=1:T\n",
-    "    println(\"Valor en t=\", t,\" :\", JuMP.value(p[1,t]))\n",
+    "    println(\"Valor en t=\", t,\" :\", JuMP.value(u[1,t]))\n",
     "end"
    ]
   },
