--- a/UnitCommitment-T2/NotebooksPregunta1/modelosUC-P1.ipynb
+++ b/UnitCommitment-T2/NotebooksPregunta1/modelosUC-P1.ipynb
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
       "Size de demandaP_ref: (118, 25)\n",
       "Size de demandP: (118, 24)\n",
       "Set parameter Username\n",
-      "Academic license - for non-commercial use only - expires 2025-03-26\n"
+      "Academic license - for non-commercial use only - expires 2025-03-25\n"
      ]
     },
     {
@@ -1497,7 +1497,7 @@
      "output_type": "stream",
      "text": [
       "┌ Warning: Axis contains one element: 1. If intended, you can safely ignore this warning. To explicitly pass the axis with one element, pass `[1]` instead of `1`.\n",
-      "└ @ JuMP.Containers C:\\Users\\sevil\\.julia\\packages\\JuMP\\OUdu2\\src\\Containers\\DenseAxisArray.jl:186\n"
+      "└ @ JuMP.Containers C:\\Users\\vicho\\.julia\\packages\\JuMP\\OUdu2\\src\\Containers\\DenseAxisArray.jl:186\n"
      ]
     },
     {
@@ -1506,8 +1506,8 @@
      "text": [
       "Gurobi Optimizer version 11.0.1 build v11.0.1rc0 (win64 - Windows 11.0 (22631.2))\n",
       "\n",
-      "CPU model: 11th Gen Intel(R) Core(TM) i7-1185G7 @ 3.00GHz, instruction set [SSE2|AVX|AVX2|AVX512]\n",
-      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "CPU model: AMD Ryzen 5 5600H with Radeon Graphics, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 6 physical cores, 12 logical processors, using up to 12 threads\n",
       "\n",
       "Optimize a model with 31806 rows, 13776 columns and 87004 nonzeros\n",
       "Model fingerprint: 0xefb6df4f\n",
@@ -1518,85 +1518,86 @@
       "  Bounds range     [0e+00, 0e+00]\n",
       "  RHS range        [1e-04, 5e+02]\n",
       "Presolve removed 9880 rows and 3106 columns\n",
-      "Presolve time: 0.35s\n",
+      "Presolve time: 0.41s\n",
       "Presolved: 21926 rows, 10670 columns, 66968 nonzeros\n",
       "Variable types: 5114 continuous, 5556 integer (5556 binary)\n",
       "\n",
-      "Root relaxation: objective 3.433998e+06, 8531 iterations, 0.73 seconds (0.79 work units)\n",
+      "Root relaxation: objective 3.433998e+06, 8531 iterations, 0.76 seconds (0.79 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0 3433997.78    0  207          - 3433997.78      -     -    1s\n",
+      "     0     0 3433997.78    0  207          - 3433997.78      -     -    2s\n",
       "     0     0 3436670.24    0  206          - 3436670.24      -     -    2s\n",
-      "     0     0 3441227.72    0  185          - 3441227.72      -     -    3s\n",
+      "     0     0 3441227.72    0  185          - 3441227.72      -     -    4s\n",
       "H    0     0                    7333001.1035 3441760.93  53.1%     -    4s\n",
       "     0     0 3455492.48    0  167 7333001.10 3455492.48  52.9%     -    4s\n",
-      "     0     0 3464729.72    0  162 7333001.10 3464729.72  52.8%     -    4s\n",
-      "     0     0 3464729.72    0  123 7333001.10 3464729.72  52.8%     -    4s\n",
-      "H    0     0                    7291811.4699 3467575.60  52.4%     -    4s\n",
-      "     0     0 3467575.60    0  125 7291811.47 3467575.60  52.4%     -    4s\n",
+      "     0     0 3464729.72    0  162 7333001.10 3464729.72  52.8%     -    5s\n",
+      "     0     0 3464729.72    0  123 7333001.10 3464729.72  52.8%     -    5s\n",
+      "H    0     0                    7291811.4699 3467575.60  52.4%     -    5s\n",
+      "     0     0 3467575.60    0  125 7291811.47 3467575.60  52.4%     -    5s\n",
       "     0     0 3467575.60    0  144 7291811.47 3467575.60  52.4%     -    5s\n",
       "     0     0 3467575.60    0  139 7291811.47 3467575.60  52.4%     -    5s\n",
-      "     0     0 3467575.60    0  117 7291811.47 3467575.60  52.4%     -    5s\n",
-      "     0     0 3467575.60    0  125 7291811.47 3467575.60  52.4%     -    5s\n",
-      "     0     0 3467575.60    0  123 7291811.47 3467575.60  52.4%     -    5s\n",
-      "     0     0 3467575.60    0  123 7291811.47 3467575.60  52.4%     -    5s\n",
-      "     0     0 3467575.60    0  119 7291811.47 3467575.60  52.4%     -    5s\n",
-      "H    0     0                    7246653.7579 3467575.60  52.1%     -    5s\n",
+      "     0     0 3467575.60    0  117 7291811.47 3467575.60  52.4%     -    6s\n",
+      "     0     0 3467575.60    0  125 7291811.47 3467575.60  52.4%     -    6s\n",
+      "     0     0 3467575.60    0  123 7291811.47 3467575.60  52.4%     -    6s\n",
+      "     0     0 3467575.60    0  123 7291811.47 3467575.60  52.4%     -    6s\n",
+      "     0     0 3467575.60    0  119 7291811.47 3467575.60  52.4%     -    6s\n",
+      "H    0     0                    7246653.7579 3467575.60  52.1%     -    6s\n",
       "     0     0 3468168.34    0  119 7246653.76 3468168.34  52.1%     -    6s\n",
-      "H    0     0                    6180507.0055 3468168.34  43.9%     -    6s\n",
-      "     0     2 3468168.34    0  119 6180507.01 3468168.34  43.9%     -    6s\n",
-      "    53    59 3523779.07   13  115 6180507.01 3477184.16  43.7%  96.9   10s\n",
-      "H   98   104                    6180489.5780 3477184.16  43.7%  72.5   11s\n",
-      "H  101   104                    6176233.7961 3477184.16  43.7%  70.9   11s\n",
-      "H  133   144                    6173355.3147 3477184.16  43.7%  58.7   12s\n",
-      "H  173   185                    3549840.9520 3477184.16  2.05%  49.7   13s\n",
-      "H  211   233                    3549384.7127 3477184.16  2.03%  44.4   13s\n",
-      "H  402   254                    3510423.4507 3477184.16  0.95%  27.8   14s\n",
-      "   422   212     cutoff   93      3510423.45 3480480.85  0.85%  26.7   15s\n",
-      "H  439   212                    3510394.0128 3483139.20  0.78%  26.5   15s\n",
-      "*  440   212              83    3510297.6678 3483139.20  0.77%  26.5   15s\n",
-      "H  601   304                    3506806.7799 3483459.20  0.67%  25.5   15s\n",
-      "H  604   304                    3506645.0869 3483459.20  0.66%  25.4   15s\n",
-      "H  710   232                    3495640.6400 3483459.20  0.35%  23.7   16s\n",
-      "H 1088   322                    3495358.1812 3489380.74  0.17%  20.6   17s\n",
-      "H 1089   321                    3495304.8186 3489380.74  0.17%  20.6   17s\n",
-      "H 1092   321                    3495286.8686 3489380.74  0.17%  20.6   17s\n",
-      "H 1184   338                    3495148.4043 3490330.92  0.14%  20.3   18s\n",
-      "* 1185   338              47    3495143.4753 3490330.92  0.14%  20.3   18s\n",
-      "H 1378   358                    3494775.9937 3490611.07  0.12%  19.7   19s\n",
-      "  1379   357 3492030.40   19  206 3494775.99 3490611.07  0.12%  19.6   21s\n",
-      "  1390   364 3490784.05   15  121 3494775.99 3490611.07  0.12%  19.5   26s\n",
-      "  1484   365 3494335.33   27   65 3494775.99 3490611.07  0.12%  25.9   30s\n",
-      "H 1983   383                    3494329.6379 3491096.34  0.09%  23.0   32s\n",
-      "  2524   283     cutoff   38      3494329.64 3492497.50  0.05%  21.0   35s\n",
-      "H 2641   269                    3494220.4074 3492680.32  0.04%  20.6   37s\n",
-      "  3001   242     cutoff   39      3494220.41 3493129.80  0.03%  19.4   40s\n",
+      "H    0     0                    6180507.0055 3468168.34  43.9%     -    7s\n",
+      "     0     2 3468168.34    0  119 6180507.01 3468168.34  43.9%     -    7s\n",
+      "    43    51 3516634.10    8  111 6180507.01 3477184.16  43.7%   123   10s\n",
+      "H   97   103                    6176430.3780 3477184.16  43.7%  84.5   12s\n",
+      "H   98   103                    6170933.4459 3477184.16  43.7%  83.8   12s\n",
+      "H  127   144                    6166874.2459 3477184.16  43.6%  73.6   13s\n",
+      "H  142   144                    6165592.5356 3477184.16  43.6%  68.6   13s\n",
+      "H  188   198                    6161807.5566 3477184.16  43.6%  56.4   14s\n",
+      "H  191   198                    6158107.3809 3477184.16  43.5%  55.6   14s\n",
+      "H  194   198                    6158070.4343 3477184.16  43.5%  54.7   14s\n",
+      "H  196   198                    3545614.5488 3477184.16  1.93%  54.4   14s\n",
+      "H  230   247                    3537421.3927 3477184.16  1.70%  49.6   14s\n",
+      "   282   286 3483139.20    4  100 3537421.39 3481798.79  1.57%  43.5   15s\n",
+      "H  435   333                    3496617.5298 3481798.79  0.42%  34.7   19s\n",
+      "H  436   333                    3496510.5609 3481798.79  0.42%  34.7   19s\n",
+      "   713   347 3489956.86   12   63 3496510.56 3488983.82  0.22%  27.6   20s\n",
+      "H  899   403                    3495079.9758 3488983.82  0.17%  25.4   20s\n",
+      "H  902   403                    3495039.8770 3488983.82  0.17%  25.3   20s\n",
+      "H  995   370                    3494941.5116 3489689.54  0.15%  24.1   21s\n",
+      "H  996   370                    3494936.5825 3489689.54  0.15%  24.1   21s\n",
+      "*  998   370              60    3494921.7107 3489689.54  0.15%  24.1   21s\n",
+      "* 1638   472              48    3494770.0657 3491556.38  0.09%  20.9   23s\n",
+      "H 1761   517                    3494723.3977 3491751.03  0.09%  20.8   23s\n",
+      "  2305   624     cutoff   24      3494723.40 3492225.48  0.07%  19.3   25s\n",
+      "H 2954   666                    3494718.4687 3492889.68  0.05%  18.5   26s\n",
+      "H 3620   624                    3494468.1021 3493373.48  0.03%  17.8   29s\n",
+      "* 3623   539              49    3494329.6379 3493373.48  0.03%  17.8   29s\n",
+      "  3916   395 3494304.21   42   20 3494329.64 3493543.45  0.02%  17.5   32s\n",
+      "H 3941   292                    3494220.4074 3493543.45  0.02%  17.5   32s\n",
       "\n",
       "Cutting planes:\n",
-      "  Gomory: 10\n",
-      "  Cover: 7\n",
-      "  Implied bound: 18\n",
-      "  Projected implied bound: 3\n",
-      "  Clique: 3\n",
-      "  MIR: 26\n",
+      "  Learned: 2\n",
+      "  Gomory: 9\n",
+      "  Cover: 22\n",
+      "  Implied bound: 46\n",
+      "  Clique: 7\n",
+      "  MIR: 43\n",
       "  StrongCG: 1\n",
-      "  Flow cover: 107\n",
-      "  Inf proof: 1\n",
-      "  Zero half: 16\n",
-      "  RLT: 1\n",
-      "  Relax-and-lift: 26\n",
+      "  Flow cover: 126\n",
+      "  Inf proof: 30\n",
+      "  Zero half: 1\n",
+      "  RLT: 4\n",
+      "  Relax-and-lift: 39\n",
       "\n",
-      "Explored 3895 nodes (83470 simplex iterations) in 42.23 seconds (68.70 work units)\n",
-      "Thread count was 8 (of 8 available processors)\n",
+      "Explored 4722 nodes (93899 simplex iterations) in 33.86 seconds (40.75 work units)\n",
+      "Thread count was 12 (of 12 available processors)\n",
       "\n",
-      "Solution count 10: 3.49422e+06 3.49433e+06 3.49478e+06 ... 6.17336e+06\n",
+      "Solution count 10: 3.49422e+06 3.49433e+06 3.49472e+06 ... 6.15807e+06\n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
-      "Best objective 3.494220407355e+06, best bound 3.493943034251e+06, gap 0.0079%\n",
+      "Best objective 3.494220407355e+06, best bound 3.494031932846e+06, gap 0.0054%\n",
       "\n",
-      "User-callback calls 15302, time in user-callback 0.02 sec\n",
+      "User-callback calls 15160, time in user-callback 0.02 sec\n",
       "1×1 XLSX.Worksheet: [\"Sheet1\"](A1:A1) \n"
      ]
     },
@@ -2093,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2111,14 +2112,14 @@
        "  Primal status      : FEASIBLE_POINT\n",
        "  Dual status        : NO_SOLUTION\n",
        "  Objective value    : 3.49422e+06\n",
-       "  Objective bound    : 3.49394e+06\n",
-       "  Relative gap       : 7.93805e-05\n",
-       "  Dual objective value : 3.49394e+06\n",
+       "  Objective bound    : 3.49403e+06\n",
+       "  Relative gap       : 5.39389e-05\n",
+       "  Dual objective value : 3.49403e+06\n",
        "\n",
        "* Work counters\n",
-       "  Solve time (sec)   : 4.22280e+01\n",
+       "  Solve time (sec)   : 3.38620e+01\n",
        "  Barrier iterations : 0\n",
-       "  Node count         : 3895\n"
+       "  Node count         : 4722\n"
       ]
      },
      "metadata": {},
